2009-04-22  Tamas Szirbucz  <szirbucz.tamas@stud.u-szeged.hu>

Reviewed by Ariya Hidayat.

        https://bugs.webkit.org/show_bug.cgi?id=25023
        Delete reply in QNetworkReplyHandler::abort() to avoid leak.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::abort):

Canonical link: https://commits.webkit.org/34799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42747 268f45cc-cd09-0410-ab3c-d52691b4dbfc